# stochastic-instrumentation-tools

./: LICENSE  README.md
distortion/C/: CMakeLists.txt  filter.c  filter.h  smoother.c  smoother.h  test_filter.c  test_smoother.c  test_smoother_integral.c  test_undistorter.c  test_undistorter_thd.c  undistorter.c  undistorter.h
distortion/Labview/: NonlinearCharacterisation.vi  UnevenIntegration.vi
distortion/Matlab/: compensate_nonlinear.m
